k8s/meeseeks.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    component: meeseeks-box
    app: rick-n-morty
  name: meeseeks-box
spec:
  selector:
    matchLabels:
      component: meeseeks-box
      app: rick-n-morty
  replicas: 1 # tells deployment to run 1 pod matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        component: meeseeks-box
        app: rick-n-morty
    spec:
      containers:
      - name: meeseeks-box
        image: tomverelst/meeseeks-box:1.0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: meeseeks-box
    app: rick-n-morty
  name: meeseeks-box
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    component: meeseeks-box
    app: rick-n-morty
