k8s/morty.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    component: morty
    app: rick-n-morty
  name: morty
spec:
  selector:
    matchLabels:
      component: morty
      app: rick-n-morty
  replicas: 1 # tells deployment to run 1 pod matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        component: morty
        app: rick-n-morty
    spec:
      containers:
      - name: morty
        image: tomverelst/rick
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: morty
    app: rick-n-morty
  name: morty
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    component: morty
    app: rick-n-morty
